# TF-MAST

./: .gitignore  README.md  config.py  dataset.py  preprocess.py  pyproject.toml  requirements-server.txt  requirements.txt  run_all.py  stage1_mae.py  stage2_tfc.py  stage3_finetune.py
configs/: db5.yaml
models/: classifier.py  decoder.py  encoder.py
runs/: append_raw_bypass_ablation_result.py  raw_bypass_ablation_20260525.sh  raw_bypass_ablation_20260525_resume.sh
scripts/: install_server.sh  smoke_local.ps1  smoke_server.sh
tests/: test_data_pipeline.py  test_masks_and_models.py  test_pipeline.py  test_raw_bypass_ablation_result.py  test_training_smoke.py
tfmast/: ablate.py  config.py  env_check.py  pipeline.py  preprocess.py  report.py  smoke.py  train.py
tfmast/data/: __init__.py  datasets.py  preprocess.py
tfmast/models/: __init__.py  heads.py  mae.py  swin_emg.py  tfc.py
tfmast/training/: common.py  masks.py  stage1_mae.py  stage2_tfc.py  stage3_finetune.py
tfmast/utils/: wandb.py
